--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </section>
 
     <footer>
-      <p>部署方法：把本文件命名为 <code>index.html</code> 放到仓库根目录（<code>main</code> 分支），开启 <strong>Settings → Pages</strong> 即可上线。</p>
-      <p>访问规则：用户主页仓库（例如 <code>用户名.github.io</code>）→ <code>https://用户名.github.io/</code>；其它仓库 → <code>https://用户名.github.io/仓库名/</code></p>
-    </footer>
+      <p></p>
+      <p>1</code></p>
+    </footer>1
   </div>
 </body>
 </html>
