--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       radial-gradient(1000px 500px at 10% -20%, rgba(150,90,255,.10), transparent 60%), var(--bg);
       color:var(--ink); font:16px/1.65 system-ui, -apple-system, Segoe UI, Roboto, PingFang SC, Noto Sans SC, Arial, sans-serif}
     a{color:inherit}
-    .container{max-width:1000px;margin:0 auto;padding:28px 18px 80px}
+    .container{max-width:1280px;margin:0 auto;padding:28px 18px 80px}
     header{display:flex;align-items:center;gap:14px}
     .logo{width:42px;height:42px;border-radius:12px;background:linear-gradient(135deg,#6aa2ff,#965aff);display:grid;place-items:center;box-shadow:0 8px 30px rgba(106,162,255,.25)}
     h1{margin:0;font-size:1.35rem;letter-spacing:.3px}
     .muted{color:var(--muted)}
 
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:16px;margin-top:18px}
+    .grid{display:grid;grid-template-columns:1fr;gap:16px;margin-top:18px}
     .card{background:var(--card);border:1px solid var(--border);border-radius:16px;overflow:hidden;transition:transform .12s ease, background .2s}
     .card:hover{transform:translateY(-2px);background:var(--card-hover)}
     .player{position:relative;width:100%;aspect-ratio:16/9;background:#0a0f22}
@@ -82,8 +82,8 @@
 
     <footer>
       <p></p>
-      <p>1</code></p>
-    </footer>1
+      <p></code></p>
+    </footer>
   </div>
 </body>
 </html>
