--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
       <div class="tag">Single page · Deployable on GitHub Pages</div>
     </header>
 
-    $1
+    <section class="card video-card" aria-label="Overview Demo">
+      <iframe class="video" src="https://www.youtube.com/embed/KqNnR1GZ-HE" title="Overview demo video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <div class="subtitle" style="margin:8px 6px 2px">Overview demo · <a href="https://youtube.com/shorts/KqNnR1GZ-HE?feature=share" target="_blank" rel="noopener">open original</a></div>
+    </section>
 
     <section class="video-grid" aria-label="Training Videos">
       <div class="card video-card">
